# wsiprocess

./: .gitignore  .readthedocs.yml  Dockerfile  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: generate_doc.yml  pypipublish.yml  python-publish.yml
docs/: conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  wsiprocess.annotationparser.html  wsiprocess.annotationparser.rst  wsiprocess.converters.html  wsiprocess.converters.rst  wsiprocess.html  wsiprocess.pytorch.html  wsiprocess.pytorch.rst  wsiprocess.rst
docs/_build/doctrees/: environment.pickle  (+5 more)
docs/_sources/: index.rst.txt  modules.rst.txt  wsiprocess.annotationparser.rst.txt  wsiprocess.converters.rst.txt  wsiprocess.rst.txt
examples/: CMU-1.txt  CMU-1_classification.xml  CMU-1_segmentation.xml  README.md  basic_usage.py  basic_usage.sh  basic_usage_without_annotation.sh  classification_dataloader.py  classification_dataloader_with_custom_maskingfn.py  crop_bounding_box_after_patching.sh  custom_patching_function.py  export_annotatino_mask_with_rule.py  export_annotation_mask_of_a_class.py  export_thumbnails_with_patch.sh  foreground_thresholding_rule.sh  just_to_see_annotation_area_thumbnail.sh  make_mask_from_image.py  multiple_operations_on_foreground.py  on_annotation_per_classes.sh  override_get_patch.py  patching_for_object_detection.sh  patching_for_segmentation.sh  patching_with_annotation_area_rule_and_foreground_area_rule.sh  segmentation_dataloader.py  translate_dot_annotation_to_bounding_box.sh  wsidataset_for_pytorch.py  wsisdataset_for_pytorch.py
sample/: CMU-1_classification.xml  CMU-1_detection.xml  CMU-1_donwload.sh  downloader.py  rule.json
sample/test2/: results.json
scripts/: converter.py  read_all_bb.py
test/: CMU-1_detection.xml  CMU-1_segmentation.xml  sha256sum.txt  test.py
tests/: test.py  test_annotation.geojson  tests.py  tests.sh
utils/: asap_to_pathology_viewer.py  load_save_tiff.py  ndpi2tiff.py  numpy2vipsimage.py  showbbonimage.py  showresultonwsi.py  upload_anaconda.sh  upload_pypi.sh  vipsimage2numpy.py  voc_to_yolo.py  wsiprocess_to_asap.py  wsiprocess_to_coco.py  wsiprocess_to_voc.py
wsiprocess/: __init__.py  annotation.bk.py  annotation.py  arguments.py  classes.py  cli.py  converter.py  error.py  inclusion.py  mask.py  patcher.py  rule.py  slide.py  test.py  utils.py  verify.py  wsi.py  wsiprocess.py
wsiprocess/annotationparser/: ASAP_parser.py  GeoJson_parser.py  NDPView_parser.py  QuPath_parser.py  SlideRunner_parser.py  __init__.py  parser_utils.py  pathology_viewer_parser.py  wsidissector_parser.py
wsiprocess/converters/: base_converter.py  wsiprocess_to_coco.py  wsiprocess_to_voc.py  wsiprocess_to_yolo.py
wsiprocess/pytorch/: __init__.py  utils.py  wsidataset.py
(+1 files in other folders)
