[metadata]
name = wsiprocess
version = attr: wsiprocess.__version__
description = Whole Slide Image (WSI) Processing Library
long_description = file: README.md, CHANGELOG.rst, LICENSE
keywords = histopathology, cytopathology, medical-imaging, whole-slide-imaging, machine-learning
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  wsiprocess/cli.py
install_requires =
  joblib
  lxml
  numpy
  opencv-python
  pyvips

[iotuibs,entry_points]
console_scripts =
  wsiprocess = cli:main
