[metadata]
name = wsiprocess
author=Takumi Ando
author_email = takumi.ando826@gmail.com
version = attr: wsiprocess.__version__
description = Whole Slide Image (WSI) Processing Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = histopathology, cytopathology, medical-imaging, whole-slide-imaging, machine-learning
license = Apache License 2.0
platform = any
classifiers =
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
url = https://github.com/tand826/wsiprocess

[options]
python_requires = >= 3.6
zip_safe = false
include_package_data = true
packages = wsiprocess
scripts =
  wsiprocess/cli.py
install_requires =
  joblib
  lxml
  numpy
  opencv-python
  pyvips

[iotuibs,entry_points]
console_scripts =
  wsiprocess = cli:main
